--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "postinstall": "npm install --prefix backend"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "mongoose": "^8.16.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2"
   }
