--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
+    "express-list-endpoints": "^7.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "react-router": "^7.6.2",
