--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,11 @@
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
     "cors": "^2.8.5",
-    "express": "^4.17.3",
-    "mongoose": "^8.4.0",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "express-list-endpoints": "^7.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.0",
     "nodemon": "^3.0.1"
   }
 }
