--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-list-endpoints": "^7.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
+    "multer": "^2.0.1",
     "nodemon": "^3.0.1"
   }
 }
