--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
